# prcb-checks

./: LICENSE  README.md  lefthook.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: README_en.md  README_ja.md
examples/pylint/: buildspec.yml  example.py
pcrb_checks/: __init__.py
prcb_checks/: __init__.py  logger.py  main.py
tests/: __init__.py  conftest.py  test_logger.py  test_main.py
